--- a/src/app/surgery-control-main/surgery-control-main.component.html
+++ b/src/app/surgery-control-main/surgery-control-main.component.html
@@ -106,7 +106,7 @@
                                 </ng-container>
                                 <ng-container matColumnDef="DiffWorkDaysLastQ">
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Day Last Q</p>
+                                        <p>Day Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -144,7 +144,7 @@
                                     matColumnDef="DiffWorkDaysPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Day Last Year Q</p>
+                                        <p>Day Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -197,7 +197,7 @@
                                     matColumnDef="DiffTotalMinutesLastQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Time Last Q</p>
+                                        <p>Time Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -236,7 +236,7 @@
                                     matColumnDef="DiffTotalMinutesPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Time Last Year Q</p>
+                                        <p>Time Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -289,7 +289,7 @@
                                     matColumnDef="DiffDepartTotalQuantityLastQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Quentity Last Q</p>
+                                        <p>Quentity Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -328,7 +328,7 @@
                                     matColumnDef="DiffDepartTotalQuantityPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Quentity Last Year Q</p>
+                                        <p>Quentity Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -394,6 +394,7 @@
                                         let row;
                                         columns: displayedColumns
                                     "
+                                    
                                     [matTooltip]="getToolTipText(row)"
                                 ></tr>
                             </table>
@@ -465,7 +466,7 @@
                                 </ng-container>
                                 <ng-container matColumnDef="DiffWorkDaysLastQ">
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Day Last Q</p>
+                                        <p>Day Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -503,7 +504,7 @@
                                     matColumnDef="DiffWorkDaysPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Day Last Year Q</p>
+                                        <p>Day Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -556,7 +557,7 @@
                                     matColumnDef="DiffTotalMinutesLastQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Time Last Q</p>
+                                        <p>Time Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -595,7 +596,7 @@
                                     matColumnDef="DiffTotalMinutesPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Time Last Year Q</p>
+                                        <p>Time Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -648,7 +649,7 @@
                                     matColumnDef="DiffDepartTotalQuantityLastQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Quentity Last Q</p>
+                                        <p>Quentity Last Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -687,7 +688,7 @@
                                     matColumnDef="DiffDepartTotalQuantityPreviousYearQ"
                                 >
                                     <th mat-header-cell *matHeaderCellDef>
-                                        <p>Diff Quentity Last Year Q</p>
+                                        <p>Quentity Last Year Q</p>
                                     </th>
                                     <td
                                         class="text-center"
@@ -754,6 +755,7 @@
                                         let row;
                                         columns: displayedColumns
                                     "
+                                    
                                     [matTooltip]="getToolTipText(row)"
                                 ></tr>
                             </table>
